--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,6 @@
 body
 {
     text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     color: springgreen
 }
