--- a/estilos.css
+++ b/estilos.css
@@ -1,7 +1,7 @@
 body
 {
     text-align: center;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
     color: springgreen
 }
 
