--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,6 @@
 body
 {
-    text-align: center;
+    text-align: left;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color:darkslategrey;
 }
@@ -9,7 +9,7 @@ body
 {
     background-color: blue;
     font-size: 30px;
-    color: cornsilk;
+    color:hotpink;
     font-weight: bold;
     text-shadow: black; width 3px;
 
