color azul, título polémico y alineado derecha

--- a/estilos.css
+++ b/estilos.css
@@ -1,8 +1,8 @@
 body
 {
-    text-align: center;
+    text-align: right;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color:darkslategrey;
+    color:midnightblue;
 }
 
 #cabecera
