--- a/estilos.css
+++ b/estilos.css
@@ -14,3 +14,13 @@ body
     text-shadow: black; width 3px;
 
 }
+
+#footer
+{
+    background-color:blueviolet;
+    font-size: 26px;
+    color: cornsilk;
+    font-weight: bold;
+    text-shadow: black; width 3px;
+
+}
