--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,6 @@
 body
 {
-    text-align: right;
+    text-align: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color:midnightblue;
 }
